<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that deletes all  data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">insert new product from button below</string>

    <!-- Subtitle text for the empty view that prompts the user to add a Product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Product</string>

    <!-- Title for the activity to add a new Product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_Product">Add a Product</string>

    <!-- Title for the activity to edit an existing Product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_Product">Edit Product</string>

    <!-- Label for editor menu option to save Product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current Product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new Product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_Product_successful">Product saved</string>

    <!-- Toast message in editor when new Product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_Product_failed">Error with saving Product</string>

    <!-- Toast message in editor when current Product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_Product_successful">Product updated</string>

    <!-- Toast message in editor when current Product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_Product_failed">Error with updating Product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current Product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current Product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current Product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting Product</string>

    <!-- Dialog message to ask the user to confirm deleting the current Product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Product?</string>

    <!-- Dialog button text for the option to confirm deleting the current Product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current Product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Product_name">Name</string>

    <!-- Text hint for info field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Product_info">description</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Product_price">price</string>

    <!-- Units for weight of the Product  [CHAR LIMIT=5] -->
    <string name="unit_Product_price">$</string>

    <!-- Label for the Product's info if the info is unknown [CHAR LIMIT=20] -->
    <string name="unknown_info">Unknown description</string>
    <string name="order_summary_email_subject"> A New Order</string>
    <string name="order_summary_description">Description: <xliff:g id="info">%s</xliff:g></string>

    <string name="thank_you">Thank you!</string>
    <string name="order_summary_price">Total: <xliff:g id="price">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity">%s</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g id="name">%s</xliff:g></string>
    <string name="sell">no products available</string>
    <string name="external_storage">External storage</string>
    <string name="permission_message">permission is necessary</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="insert_Product_failed">fill all empty fields</string>


</resources>
